[metadata]
name = watcherlab-ti-client-python
version = 0.0.2
author = watcherlab
author_email = service@watcherlab.com
description = Watcherlab threat intelligence client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/watcherlab/ti-client-python
project_urls =
    GitHub = https://github.com/watcherlab/ti-client-python
    Gitee = https://gitee.com/beijing_watcherlab/ti-client-python/
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: Chinese (Simplified)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
